updated updates page, and adjust coding structure

--- a/forum.html
+++ b/forum.html
@@ -23,8 +23,11 @@
             <a href="updates.html">Updates</a>
             <a href="shop.html">Shop</a>
             <a href="signinforum.html">Forum</a>
-        </section> 
-   
+        </section>
+        <section>
+        <p><label for="Create a post">Create a post:</label></p>
+            <textarea id="Creae a Post" name="Creste a post" rows="16" cols="50"> Create a post.</textarea>   
+        </section>
         <script src="script.js"></script>
         
         <footer>
