--- a/godspage.html
+++ b/godspage.html
@@ -31,53 +31,56 @@
                     God Lineup For Season 9
                 </em>
             </h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/4U9uYaBu0HY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4U9uYaBu0HY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <!-- this is a list of the gods that are in the gmae and i will be explaining how they work, class, and how to use them for positioning  -->
         <h3>
             Gods
         </h3>
+        <table>
+            <tr>
+                <th>Gods</th>
+                <th>Backline/Frontline</th>
+            </tr>
+            <!-- Second Row -->
+            <tr>
+                    <td>Loki</td>
+                    <td>Backline</td>
+            </tr>
+            <!-- End of Second Row -->
+                <tr>
+                    <td>Zues</td>
+                    <td>Backline</td>
+                </tr>
+                <tr>
+                    <td>Cabrakan</td>
+                    <td>Frontline</td>
+                </tr>
+                    <td>Vamana</td>
+                    <td>Frontline</td>
+                </tr>
+                <tr>   
+                    <td>Xbalanque</td>
+                    <td>Backline</td>
+                </tr>
+        </table>
 
         <p>
             With over 100 unique characters from 16 Different Pantheons and 5 roles they're sprecialized in
         </p>
 
-
-        <section id="cabrakan">
-            <img src="https://webcdn.hirezstudios.com/smite/god-skins/cabrakan_standard-cabrakan.jpg" alt="Cabrakan" width=200> 
-            <p>
-                Cabrakan   
-                <br>
-            </p>
-        </section>
-        <section id="Vamana">      
-            <img src="https://webcdn.hirezstudios.com/smite/god-skins/vamana_standard-vamana.jpg" alt="Vamana" width="200">
-            <p>
-                Vamana
-                <br>
-            </p>
-        </section>
-
-
-        <section id="xbalanque">        
-            <img src="https://webcdn.hirezstudios.com/smite/god-skins/xbalanque_standard-xbalanque.jpg" alt="Xball" width="200">
-            <p>
-                Xbalanque   
-            </p>
-        </section>
-
-        <section id="Zues">
-            <img src="https://webcdn.hirezstudios.com/smite/god-skins/zeus_standard-zeus.jpg"  alt="Zues" width="200">
-            <p>
-                Zues
-            </p>
-        </section>
-        <section id="Loki">
-            <img src="https://webcdn.hirezstudios.com/smite/god-skins/loki_standard-loki.jpg" alt="Loki" width="200">
-            <p>
-                Loki
-            </p>
-        </section>
+            <div class="mo">
+                <img src="https://webcdn.hirezstudios.com/smite/god-skins/cabrakan_standard-cabrakan.jpg" alt="Cabrakan"width="200">
+                <h5>Cabrakan</h5>  
+                <img src="https://webcdn.hirezstudios.com/smite/god-skins/xbalanque_standard-xbalanque.jpg" alt="Xball" width="200">
+                <h5>Xbalanque</h5>
+                <img src="https://webcdn.hirezstudios.com/smite/god-skins/vamana_standard-vamana.jpg" alt="Vamana" width="200">
+                <h5>Vamana</h5>
+                <img src="https://webcdn.hirezstudios.com/smite/god-skins/zeus_standard-zeus.jpg" alt="Zues" width="200">
+                <h5>Zues</h5>
+                <img src="https://webcdn.hirezstudios.com/smite/god-skins/loki_standard-loki.jpg" alt="Loki" width="200">
+                <h5>Loki</h5>
+            </div>
 
         <script src="script.js"></script>
         <footer>
