--- a/shop.html
+++ b/shop.html
@@ -29,27 +29,27 @@
         <p>This is a place where we update you on upcoming and past skins within the couple of weeks.</p>
         <h4>New God Lancelot</h4>
            </section>
-    showing new skins for the update 9.6 patch
+    <!-- showing new skins for the update 9.6 patch -->
         <section>
-        <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/a7844323b3b6f733c8f73fe7ed4aeaff591b7b8c.jpg" alt="Lancelot"     width=200 <br>
-            <p>Lancelot<br></p> 
-        <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/7c5cb3e385b58a6ffd56e1aa5ed11c00d78416d0.jpg" alt="Mizkif Thanatos" width=200 </p>
-        <p>Mizkif Thanatos</p>
-        <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/3e0f64e2d4b1456f8722ea3ca3a882cefb72548b.jpg" alt="Dark Angel Ah Muzen Cab" width=200 <br>
-        <p>Dark Angel Ah Muzen Cab<br></p>
-        <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/1e7e3dbde468ed9def44cc740aae66b03e69a737.jpg" alt="Bone Shaker Cerberus" width=200 <br>
-               <p>Bone Shaker Cerberus</p>
-        <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/aa1a43654d195c9df77bec772e372c681d1a3200.jpg" width=200 <br>
-               <p>Oblivion Temptress Da Ji</p>
-        <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/2e3ffc296575e8c4b3fb85824be7db068f7324ad.jpg" width=200 <br>
+            <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/a7844323b3b6f733c8f73fe7ed4aeaff591b7b8c.jpg" alt="Lancelot" width=200 </p>
+                <p>Lancelot<br></p> 
+            <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/7c5cb3e385b58a6ffd56e1aa5ed11c00d78416d0.jpg" alt="Mizkif Thanatos" width=200 </p>
+                <p>Mizkif Thanatos</p>
+            <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/3e0f64e2d4b1456f8722ea3ca3a882cefb72548b.jpg" alt="Dark Angel Ah Muzen Cab" width=200 </p>
+                <p>Dark Angel Ah Muzen Cab<br></p>
+             <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/1e7e3dbde468ed9def44cc740aae66b03e69a737.jpg" alt="Bone Shaker Cerberus" width=200 </p>
+                <p>Bone Shaker Cerberus</p>
+            <p><img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/aa1a43654d195c9df77bec772e372c681d1a3200.jpg" alt="Oblivion Temptress Da Ji" width=200 </p>
+                <p>Oblivion Temptress Da Ji</p>
+            <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/2e3ffc296575e8c4b3fb85824be7db068f7324ad.jpg" alt="Gazing Archon Medusa" width=200 </p>
                 <p>Gazing Archon Medusa</p>
-        <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/5324e3e7a7887c2f2738d4ac00b6d70f612bd8a2.jpg" width=200 <br>
+            <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/5324e3e7a7887c2f2738d4ac00b6d70f612bd8a2.jpg" alt="Code Slasher King Arthur" width=200 </p>
                 <p>Code Slasher King Arthur</p>
-        <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/31ade915e47a9dc52271a89e108ed1638b1a2867.jpg" width=200 <br>
+            <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/31ade915e47a9dc52271a89e108ed1638b1a2867.jpg" alt="Summer Eclipse Morgan Le Fay" width=200 </p>
                 <p>Summer Eclipse Morgan Le Fay</p>
-        <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/06e104068230bb75f319fe735f5fc46ba3e1f2ed.jpg" width=200 <br>
+            <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/06e104068230bb75f319fe735f5fc46ba3e1f2ed.jpg" alt="Burger Time Xing Tian" width=200 </p>
                 <p>Burger Time Xing Tian</p>
-        <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/e5c6ad4b8080a49cc0381cf37fea34c887b16484.jpg" width=200 <br>
+            <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/10028503/e5c6ad4b8080a49cc0381cf37fea34c887b16484.jpg" alt="Slash Kuzenbo" width=200 </p>
                 <p>Slash Kuzenbo</p>
 
     </section>
