updated all pages by correcting the indentations and adding more to my updates page so new updates on lancelot nerf

--- a/forum.html
+++ b/forum.html
@@ -12,11 +12,16 @@
     </head>
 <!--     this is where you come and connect with others share ideas, and be present in the community -->
     <body>
-        <h1>Welcome to our Forum</h1><br>
-        <form>
-            <p><label for="Create a post">Create a post:</label></p>
-            <textarea id="Creae a Post" name="Creste a post" rows="16" cols="50"> Create a post.</textarea>
-        </form>
+        <header>
+            <h1>Welcome to our Forum</h1>
+        </header>
+        <section>
+            <form>
+                <p><label for="Create a post">Create a post:</label></p>
+                <textarea id="Creae a Post" name="Creste a post" rows="16" cols="50"> Create a post.</textarea>
+            </form>
+        </section>
+        <!-- navigation to the main website -->
         <section id="navigation">
             <a href="index.html">Home</a>
             <a href="godspage.html">Gods</a>
@@ -25,9 +30,16 @@
             <a href="signinforum.html">Forum</a>
         </section>
         <section>
-        <p><label for="Create a post">Create a post:</label></p>
-            <textarea id="Creae a Post" name="Creste a post" rows="16" cols="50"> Create a post.</textarea>   
+            <p>
+                <label for="Create a post">
+                    Create a post:
+                </label>
+            </p>
+            <textarea id="Creae a Post" name="Creste a post" rows="16" cols="50">
+                Create a post.
+            </textarea>   
         </section>
+        <!-- we can create a post and share to your fellow smite community -->
         <script src="script.js"></script>
         
         <footer>
