--- a/godspage.html
+++ b/godspage.html
@@ -13,10 +13,11 @@
     </head>
 
     <body>
-        <h1>
-            Choose Your God
-        </h1><br>
-
+        <Header>
+            <h1>
+                Choose Your God
+            </h1>
+        </Header>
         <section id="navigation">
             <a href="index.html">Home</a>
             <a href="godspage.html">Gods</a>
@@ -24,7 +25,7 @@
             <a href="shop.html">Shop</a>
             <a href="signinforum.html">Forum</a>
         </section> 
-
+<!-- this webpage shows the list of gods and how they are used, styled, positioned and abilbities -->
         <section id="godlineup">
             <h2>
                 <em>
@@ -37,17 +38,18 @@
         <h3>
             Gods
         </h3>
-        <table>
-            <tr>
-                <th>Gods</th>
-                <th>Backline/Frontline</th>
-            </tr>
-            <!-- Second Row -->
-            <tr>
+        <section>
+            <table>
+                <tr>
+                    <th>Gods</th>
+                    <th>Backline/Frontline</th>
+                </tr>
+                <!-- Second Row -->
+                <tr>
                     <td>Loki</td>
                     <td>Backline</td>
-            </tr>
-            <!-- End of Second Row -->
+                </tr>
+                <!-- End of Second Row -->
                 <tr>
                     <td>Zues</td>
                     <td>Backline</td>
@@ -63,28 +65,29 @@
                     <td>Xbalanque</td>
                     <td>Backline</td>
                 </tr>
-        </table>
+            </table>    
+        </section>
 
         <p>
             With over 100 unique characters from 16 Different Pantheons and 5 roles they're sprecialized in
         </p>
-
-            <div class="mo">
-                <img src="https://webcdn.hirezstudios.com/smite/god-skins/cabrakan_standard-cabrakan.jpg" alt="Cabrakan"width="200">
-                <h5>Cabrakan</h5>  
-                <img src="https://webcdn.hirezstudios.com/smite/god-skins/xbalanque_standard-xbalanque.jpg" alt="Xball" width="200">
-                <h5>Xbalanque</h5>
-                <img src="https://webcdn.hirezstudios.com/smite/god-skins/vamana_standard-vamana.jpg" alt="Vamana" width="200">
-                <h5>Vamana</h5>
-                <img src="https://webcdn.hirezstudios.com/smite/god-skins/zeus_standard-zeus.jpg" alt="Zues" width="200">
-                <h5>Zues</h5>
-                <img src="https://webcdn.hirezstudios.com/smite/god-skins/loki_standard-loki.jpg" alt="Loki" width="200">
-                <h5>Loki</h5>
-            </div>
+        <!-- photos of the most annoying characters -->
+        <div class="mo">
+            <img src="https://webcdn.hirezstudios.com/smite/god-skins/cabrakan_standard-cabrakan.jpg" alt="Cabrakan"width="200">
+            <h5>Cabrakan</h5>  
+            <img src="https://webcdn.hirezstudios.com/smite/god-skins/xbalanque_standard-xbalanque.jpg" alt="Xball" width="200">
+            <h5>Xbalanque</h5>
+            <img src="https://webcdn.hirezstudios.com/smite/god-skins/vamana_standard-vamana.jpg" alt="Vamana" width="200">
+            <h5>Vamana</h5>
+            <img src="https://webcdn.hirezstudios.com/smite/god-skins/zeus_standard-zeus.jpg" alt="Zues" width="200">
+            <h5>Zues</h5>
+            <img src="https://webcdn.hirezstudios.com/smite/god-skins/loki_standard-loki.jpg" alt="Loki" width="200">
+            <h5>Loki</h5>
+        </div>
 
         <script src="script.js"></script>
         <footer>
-            Copyright &copy; Made with ❤️ by Jehloni Willis <br>
+            Copyright &copy; Made with ❤️ by Jehloni Willis
         </footer>
     </body>
 </html>
