--- a/signinforum.html
+++ b/signinforum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
@@ -26,10 +26,10 @@
             </section> 
         </header>
         <section id="mainVideo">
-            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/khsjzariacQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315"src="https://www.youtube.com/embed/khsjzariacQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
 <!--         sign up for the website here -->
-        <section>
+        <section id=signup>
             <form>
                 <label for="fname">First name:</label>
                 <input type="text" id="fname" name="fname">
@@ -43,9 +43,7 @@
                 <input type="text" id="month" name="month">
                 <label for="date">date:</label>
                 <input type="date" id="date" name="date">
-
-                <input type="submit" value="Submit">                
-                
+                <input type="submit" value="Submit">   
             </form>
         </section>
         <script src="script.js"></script>
